modify pre commit